fix(apcd): fp-1818 fp-1905 irregular cell spacing

--- a/apcd-cms/src/apps/admin_regis_table/static/admin_regis_table/registrations_table.css
+++ b/apcd-cms/src/apps/admin_regis_table/static/admin_regis_table/registrations_table.css
@@ -10,10 +10,7 @@
     letter-spacing: 0px;
     color: #484848;
     opacity: 1;
-    padding-top: var(--cell-padding);
-    padding-bottom: var(--cell-padding);
-    padding-left: 10px;
-    padding-right: 40px;
+    padding: var(--cell-padding);
     border-collapse: collapse;
     border-right: 1px solid #fff;
     border-left: 1px solid #fff;
